<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_qlsp"
            android:title="@string/QLSP"
            android:icon="@drawable/ic_quanly"/>

        <item android:id="@+id/nav_gioithieu"
            android:title="@string/gioithieu"
            android:icon="@drawable/ic_gioithieu"/>
    </group>
    <item android:title="@string/khac">
        <menu>

            <item android:id="@+id/nav_seting"
                android:title="@string/setting"
                android:icon="@drawable/ic_settings_24"/>

            <item android:id="@+id/nav_dang_xuat"
                android:title="@string/dangxuat"
                android:icon="@drawable/ic_logout_24"/>
        </menu>
    </item>

</menu>